--- a/src/Assets/scss/style.scss
+++ b/src/Assets/scss/style.scss
@@ -6,11 +6,11 @@
 .main{
     // background-image: url('../img/bgq.png');
     // background: linear-gradient(to right, rgba(255,255,255,0) 20%, rgb(255 255 255 / 50%)), url('../img/bgq.png');
-    background: linear-gradient( rgba(255, 255, 255, 0.9),
-              rgba(255, 255, 255, 0.9)), url('../img/bgq.png');
+    // background: linear-gradient( rgba(255, 255, 255, 0.9),
+    //           rgba(255, 255, 255, 0.9)), url('../img/bgq.png');
     // position: absolute;
     // width: 100%;
     // opacity: 0.1;
 }
-@import "header";
-@import "home";
+// @import "header";
+// @import "home";
